# aksono

./: .gitignore  Cargo.toml  README.md  aksono.example.toml  diesel.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
migrations/72_synapse/: down.sql  up.sql
nix/: default.nix
src/: config.rs  main.rs  schema.rs
src/api/: Cargo.toml  error.rs
src/api/src/: c2s.rs  error.rs  lib.rs  router.rs  s2s.rs  uiaa.rs  wk.rs
src/api/src/c2s/: account.rs  login.rs  logout.rs  refresh.rs  register.rs  session.rs  versions.rs
src/api/src/c2s/account/: deactivate.rs  password.rs
src/api/src/c2s/login/: get_token.rs
src/api/src/c2s/logout/: all.rs
src/api/src/c2s/register/: available.rs  registration_token.rs  root.rs
src/api/src/c2s/session/: get_login_types.rs  login.rs
src/api/src/router/: error.rs  incoming.rs  middleware.rs  outgoing.rs  ruma_handler.rs  sender.rs
src/api/src/s2s/: keys.rs  version.rs
src/api/src/wk/: client.rs  support.rs
src/common/: Cargo.toml
src/common/src/: app.rs  config.rs  error.rs  lib.rs  router.rs  server.rs  utils.rs
src/common/src/error/: api.rs  client.rs  startup.rs
src/common/src/router/: ruma_handler.rs
src/models/: Cargo.toml
src/models/src/: entities.rs  lib.rs  schema.rs  traits.rs  utils.rs
src/models/src/impls/: access_tokens.rs  account_data.rs  devices.rs  profiles.rs  refresh_tokens.rs  registration_token.rs  server_keys_json.rs  server_signature_keys.rs  uiaa_credentials.rs  uiaa_sessions.rs  users.rs
