[package]
name = "aksono"
edition = "2021"
rust-version = "1.82.0"
license = "Apache-2.0"
keywords = ["matrix", "chat", "messaging", "federation", "social", "community"]

[dependencies]
# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# (De)serialization
serde = { version = "1.0.216", features = ["derive"] }

# Configuration parsing
toml = "0.8.19"

# Async runtime
tokio = { version = "1.42.0", features = ["full"] }

# Router
axum = { version = "0.7.9", features = ["tokio", "json", "http2"] }

# Error deriving
thiserror = { version = "2.0.9" }

[profile.dev]
incremental = true
opt-level = 1
lto = 'off'

# NOTE: you might have to adjust the value for opt-level, as it
# comes with the drawback of less useful error messages for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
opt-level = 3
lto = 'thin'

[profile.release.package."*"]
opt-level = 3

[lints.rust]

[lints.clippy]
