[package]
name = "aksono-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
aksono-common = { path = "../common" }
aksono-models = { path = "../models" }

# Tracing
tracing = { workspace = true }

# (De)serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Router
axum = { workspace = true }
axum-extra = { workspace = true }

# Error deriving
thiserror = { workspace = true }

# Matrix types and traits
ruma = { workspace = true }

# HTTP body utilities
http-body-util = { workspace = true }

# Byte abstractions
bytes = { workspace = true }

# DB ORM
diesel = { workspace = true }
diesel-async = { workspace = true }

# Query parsing
serde_html_form = { version = "0.2.7" }

[lints]
workspace = true
