[package]
name = "aksono-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]

# (De)serialization
serde = { workspace = true }

# Configuration parsing
toml = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error deriving
thiserror = { workspace = true }

# Matrix types and traits
ruma = { workspace = true }

# URL
url = { workspace = true }

# CSPRNG
rand = { workspace = true }

# Password hashing
argon2 = { workspace = true }

diesel = { workspace = true }
diesel-async = { workspace = true }

# Time
chrono = { workspace = true }

[lints]
workspace = true
