[package]
name = "aksono-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
aksono-common = { path = "../common" }

# DB ORM
diesel = { workspace = true }
diesel-async = { workspace = true }

# Matrix types and traits
ruma = { workspace = true }

serde_json = { workspace = true }

[lints]
workspace = true
